--- a/Document2.html
+++ b/Document2.html
@@ -47,7 +47,7 @@
     <br><br>
 
     <div class="flex-container">
-      <div>PROJECT : <a href="https://play.google.com/store/apps/details?id=com.nevadasoft.easycam&hl=en">Easy Camera</a><br/><img src="easycam.png" style="width: 250px;height: 150px;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
+      <div>PROJECT : <a href="https://play.google.com/store/apps/details?id=com.nevadasoft.easycam&hl=en">Easy Camera</a><br/><img src="easycam.PNG" style="width: 250px;height: 150px;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
       <div>PROJECT : <a href="https://play.google.com/store/apps/details?id=com.harridon.videonow&hl=en">Video Now</a><br/><img src="videonow.PNG" style="width: 250px; height: 150px;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
       
          </div>
