--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p><strong>2019-2020</strong>: Web Development, jQuery, JSON, Javascript, C++, React</p>
              <p><strong>2 Semester</strong></p>
 
-            <p><a href="https://sites.google.com/view/designedbyhtwoodevllc/home" class="link" style="color:red;">Graphic Designs</a></p>
+            <p><a href ="" onclick="window.open('https://sites.google.com/view/designedbyhtwoodevllc/home');" class="link" style="color:red;">Graphic Designs</p></a>
 
         </ul>
         </div>
@@ -92,8 +92,9 @@
     <br>
     
     <div align="bottom">
-        <a href="https://github.com/Harridon86?tab=repositories"><i class="fa fa-github socialicon" style="font-size:65px;color:blue"></i></a>
+    <a href="" onclick="window.open('https://www.github.com/Oke-Harridon');"><i class="fa fa-github socialicon" style="font-size:65px;color:blue"></i></a>
         </div>
+    <a href="" onclick="window.open('https://www.linkedin.com/in/okeyto-harridon-3930221aa');"><i class="fa fa-linkedin linked" style="font-size:48px;color:red"></i></a>
     <br>
             
         <div class="form-popup" id="myForm">
