--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <br>
             
         <div class="form-popup" id="myForm">
-            <form action="mailto:oharrydon@yahoo.com" class="form-container">
+            <form action="mailto:" class="form-container">
 
                 <label for="email"><b>Email</b></label>
                 <input type="text" placeholder="Enter Email" name="email" required>
