--- a/Document2.html
+++ b/Document2.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="UX, UI, DESIGNER">
   <meta name="author" content="Okeyto Harridon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+ <link rel="icon" type="image/x-icon" href="companylogo.png">
     <script>
         function openNav() {
             document.getElementById("myNav").style.width = "100%";
@@ -47,13 +47,13 @@
     <br><br>
 
     <div class="flex-container">
-      <div>PROJECT : <a href="https://play.google.com/store/apps/details?id=com.nevadasoft.easycam&hl=en">Easy Camera</a><br/><img src="easycam.PNG" style="width: 250px;height: 150px;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
-      <div>PROJECT : <a href="https://play.google.com/store/apps/details?id=com.harridon.videonow&hl=en">Video Now</a><br/><img src="videonow.PNG" style="width: 250px; height: 150px;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
+      <div>PROJECT : <a href="" onclick="window.open('https://play.google.com/store/apps/details?id=com.nevadasoft.easycam&hl=en');">Easy Camera</a><br/><img src="easycam.PNG" style="width: 45vw;height: 45vh;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
+      <div>PROJECT : <a href="" onclick="window.open('https://play.google.com/store/apps/details?id=com.harridon.videonow&hl=en');">Video Now</a><br/><img src="videonow.PNG" style="width: 45vw; height: 45vh;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
       
          </div>
         <div class="flex-container">
-      <div>PROJECT : <a href="https://play.google.com/store/apps/details?id=com.slotmachinemegrubf.com&hl=en">Mega Slot Machine</a><br/><img src="slot.png" style="width: 250px;height: 150px;display: block; border-radius: 8px; img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}" /></div>  
-        <div>PROJECT : <a href="https://play.google.com/store/apps/details?id=com.boogagames.caksermatchpuazlle&hl=en">Caker Match Puzzle</a><br><img src="puzzle.PNG" style="width: 250px;height: 150px;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
+      <div>PROJECT : <a href="" onclick="window.open('https://play.google.com/store/apps/details?id=com.slotmachinemegrubf.com&hl=en');">Mega Slot Machine</a><br/><img src="slot.png" style="width: 45vw;height: 45vh;display: block; border-radius: 8px; img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}" /></div>  
+        <div>PROJECT : <a href="" onclick="window.open('https://play.google.com/store/apps/details?id=com.boogagames.caksermatchpuazlle&hl=en');">Caker Match Puzzle</a><br><img src="puzzle.PNG" style="width: 45vw;height: 45vh;display: block;border-radius: 8px;img:hover{box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}"></div>
          </div>
 
     <br><br>
@@ -75,7 +75,7 @@
 
         <p>Java</p>
         <div class="container">
-            <div class="skills java">60%</div>
+            <div class="skills java">50%</div>
         </div>
 
         <p>C#</p>
